Start implementing dynamic sets not tested yet. Improved default test with overwrite.